# dicom-std

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  settings.gradle.kts
apps/download/: Cargo.toml  README.md
apps/download/src/: main.rs
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: tv.dicom.std.kotlin-application-conventions.gradle.kts  tv.dicom.std.kotlin-common-conventions.gradle.kts  tv.dicom.std.kotlin-library-conventions.gradle.kts
codegen/: Cargo.toml
codegen/src/: error.rs  helper.rs  lib.rs  traits.rs
codegen/src/rust/: ast.rs  error.rs  generator.rs  mod.rs  syntax.rs  translator.rs
core/: Cargo.toml  README.md  build.gradle.kts
core/src/: error.rs  lib.rs  model.rs
core/src/main/kotlin/tv/dicom/std/core/: Resource.kt
core/src/main/kotlin/tv/dicom/std/core/model/: AttributeType.kt  DicomStandard.kt  Tag.kt  Usage.kt  XRef.kt
core/src/main/kotlin/tv/dicom/std/core/model/ciod/: Ciod.kt  Entry.kt
core/src/main/kotlin/tv/dicom/std/core/model/coid/: Definition.kt  Entry.kt
core/src/main/kotlin/tv/dicom/std/core/model/dictionary/: DataElement.kt  RangedTag.kt  RangedTagItem.kt  VR.kt
core/src/main/kotlin/tv/dicom/std/core/model/imd/: DataEntry.kt  Entry.kt  Imd.kt  IncludeEntry.kt
core/src/main/kotlin/tv/dicom/std/core/model/niod/: DataEntry.kt  Definition.kt  Entry.kt  IncludeEntry.kt
core/src/main/kotlin/tv/dicom/std/core/parser/: DicomStandardBuilder.kt  DicomStdParser.kt
core/src/main/resources/: errors.properties
core/src/test/kotlin/tv/dicom/std/core/: ResourceTest.kt
core/src/test/kotlin/tv/dicom/std/core/model/: TagTest.kt
core/src/test/kotlin/tv/dicom/std/core/model/dictionary/: RangedTagItemTest.kt  RangedTagTest.kt
core/src/test/kotlin/tv/dicom/std/core/parser/: DicomStandardBuilderKtTest.kt  DicomStdParserKtTest.kt  DicomStdParserTest.kt  TestHelper.kt
core/src/test/resources/tv/dicom/std/core/parser/: build_ciod_entry.xml  build_data_element_entry2.xml  build_data_element_entry3.xml  build_imd_entry2.xml  build_imd_entry3.xml  find_dependent.xml  para_xref.xml  part_03_chapter_A.xml  part_03_extract.xml  part_03_table_A.2-1.xml  part_06_extract.xml
fetch/: Cargo.toml  README.md
fetch/src/: lib.rs
fetch/tests/: integration_tests.rs
model/src/main/kotlin/tv/dicom/std/model/: AttributeType.kt  DicomStandard.kt  Resource.kt  Tag.kt  Usage.kt  XRef.kt
model/src/main/kotlin/tv/dicom/std/model/ciod/: Ciod.kt  Entry.kt
model/src/main/kotlin/tv/dicom/std/model/dictionary/: DataElement.kt  RangedTag.kt  RangedTagItem.kt  VR.kt
model/src/main/kotlin/tv/dicom/std/model/imd/: DataEntry.kt  Entry.kt  Imd.kt  IncludeEntry.kt
model/src/main/resources/: errors.properties
model/src/test/kotlin/tv/dicom/std/model/: ResourceTest.kt  TagTest.kt
model/src/test/kotlin/tv/dicom/std/model/dictionary/: RangedTagItemTest.kt  RangedTagTest.kt
parser/: build.gradle.kts
parser/src/main/kotlin/tv/dicom/std/parser/: DicomStandardBuilder.kt  DicomStdParser.kt
parser/src/main/resources/: errors.properties
parser/src/test/kotlin/tv/dicom/std/parser/: DicomStandardBuilderKtTest.kt  DicomStdParserTest.kt  TestHelper.kt
parser/src/test/resources/tv/dicom/std/parser/: build_data_element_entry1.xml  build_imd_entry1.xml  build_imd_entry4.xml  dicomVersion.xml  table_row_columns.xml
parser/xml/: Cargo.toml  README.md
parser/xml/resources/samples/: xml_sample_01.xml  xml_sample_02.xml
parser/xml/src/: defs.rs  dom.rs  error.rs  helper.rs  lib.rs  query.rs
parser/xml/src/data_dictionary/: mod.rs  registery.rs
parser/xml/src/iod/: iod.rs  mod.rs
test-data/: Cargo.toml  README.md  build.rs
test-data/src/: lib.rs
utils/: Cargo.toml  README.md
utils/src/: lib.rs
utils/tests/: create_tmp_dir_01.rs
