[package]
name = "dicom-std-codegen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tom Vercauteren <tomvercaut@gmail.com>"]
description = "Library to generate code from the DICOM standard."
readme = "README.md"
keywords = ["dicom", "standard", "code generation"]
homepage = "https://github.com/tomvercaut/dicom-std"


[dependencies]
dicom-std-core = { path = "../core" }
dicom-std-utils = { path = "../utils" }
lazy_static = "1.4"
regex = "1.5"
thiserror = "1.0"
log = "0.4.14"

[dev-dependencies]
env_logger = "^0.9"
serde_json = "1.0"
dicom-std-test-data = { path = "../test-data" }
dicom-std-xml-parser = { path = "../parser/xml" }
