[package]
name = "dicom-std-fetch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tom Vercauteren <tomvercaut@gmail.com>"]
description = "Library to download DICOM parts in XML format."
readme = "README.md"
keywords = ["dicom", "standard", "code generation"]
homepage = "https://github.com/tomvercaut/dicom-std"

[dependencies]
url = "2.2"
reqwest = {version="0.11", features=["blocking"]}
log = "0.4"
thiserror = "1.0"
scraper = "0.12.0"
markup5ever = "0.10"
chrono = "0.4.19"

[dev-dependencies]
env_logger = "^0.9"
rand = "0.8"
dicom-std-utils = {path="../utils"}
stdext = "0.3"
