[package]
name = "dicom-std-test-data"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tom Vercauteren <tomvercaut@gmail.com>"]
description = "Library to download DICOM parts in XML format."
readme = "README.md"
keywords = ["dicom", "standard", "code generation"]
homepage = "https://github.com/tomvercaut/dicom-std"

[dependencies]

[build-dependencies]
dicom-std-fetch = { path = "../fetch" }
anyhow = "1.0.52"